# gzdoom-jank-menu

./: .gitignore  Makefile  TODO.md  gzjank-menu.py  gzjank_utils.py  jank-launcher.py  pyproject.toml
src/: cli.py  jank.py  menu.py
