[tool.black]
line-length = 120

[tool.poetry]
name = "jank-doom-launcher"
version = "0.1.0"
description = "Launch script for gzdoom"
authors = ["Jank <jank@panichev.xyz>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
whaaaaat = "^0.5.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
