[tool.black]
line-length = 119

[tool.poetry]
name = "gzjank-doom-launcher"
version = "0.3.0"
description = "Minimalistic launcher for gzdoom"
authors = ["Jank <jank@panichev.xyz>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
click = "^8.0.1"
questionary = "^1.10.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
ipython = "^8.0.1"
pyinstaller = "^4.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
